# project-sovereign

./: .env.example  .gitignore  AGENTS.md  AUDIT_ASSISTANT_FEEL.md  AUDIT_SUMMARY.md  FULL_SYSTEM_AUDIT_2026-04-26.md  README.md  ROUTING_AUDIT_REPORT.md  Taskfile.yml  architecture_review.md  pyproject.toml  pytest.py  requirements.txt  sitecustomize.py
agents/: adapter.py  base_agent.py  browser_agent.py  catalog.py  codex_cli_agent.py  coding_agent.py  communications_agent.py  memory_agent.py  personal_ops_agent.py  planner_agent.py  registry.py  reminder_agent.py  research_agent.py  reviewer_agent.py  scheduling_agent.py  verifier_agent.py
app/: config.py  main.py  slack_main.py
core/: assistant.py  assistant_fast_path.py  browser_requests.py  context_assembly.py  conversation.py  evaluator.py  fast_actions.py  interaction_context.py  invocation_builders.py  logging.py  model_routing.py  models.py  objective_loop.py  operator_context.py  orchestration_graph.py  personal_ops_intent.py  planner.py  prompt_library.py  request_trace.py  router.py  state.py  supervisor.py  system_context.py  transport.py
docs/: AI_HUB_DEV_WORKFLOW.md  DEPLOYMENT.md  GO_LIVE_CHECKLIST.md  MANUAL_TESTING.md  PRODUCT_WORKFLOW.md  REMOTE_BROWSER_WORKER_PLAN.md  VPS_ENV_SETUP.md  assistant_feel_audit.md  backend_stabilization.md  behavioral_smoke_audit.md  browser_execution_readiness.md  browser_use_readiness.md  browser_worker_architecture.md  calendar_readiness.md  ceo_capability_awareness.md  codex_agent_readiness.md  communications_agent_readiness.md  deployment_transport_audit.md  (+10 more)
(+173 files in other folders)
